testcases/negative/invalid_encoding.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
PHOTO;ENCODING=BASE64:not-valid-base64-!!!
END:VCARD
